--- a/echo_hostname.yml
+++ b/echo_hostname.yml
@@ -3,8 +3,9 @@
   tasks:
     - name: Wait until SSH is available
       ansible.builtin.wait_for_connection:
+        delay: 45
         timeout: 180
-        sleep: 70
+        sleep: 30
 
     - name: Echo hostname
       command: hostname
